Fix errant horizontal scrollbar on level select screen

--- a/game/index.css
+++ b/game/index.css
@@ -186,6 +186,9 @@ body:not(.replaying) #replay-bar {
 #level-select .level-button {
   min-height: 50px;
   margin: 10px;
+  /* clip the pseudo elements used for level completion indication; might get rid of this by switching to SVG icons or some-such */
+  /* to avoid a horizontal scrollbar on small screens */
+  overflow: hidden;
 }
 
 #level-select {
